@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-19 Tue 12:27 -->
+<!-- 2025-08-19 Tue 15:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-08-19 12:27:01</i></td>
+<td class="org-left"><i>2025-08-19 15:56:46</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-08-19 12:27:07</i></td>
+<td class="org-left"><i>2025-08-19 15:57:04</i></td>
 </tr>
 </tbody>
 </table>
@@ -389,7 +389,9 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>mandeldragon.cpp</li>
 <li>mandeldragon_orbits.cpp</li>
 <li>ikeda_attractor.cpp</li>
-<li>lorenz_frac.cpp</li>
+<li>3da_frac_lorenz.cpp</li>
+<li>16bit_data_image_filter.cpp</li>
+<li>3da_frac_langford.cpp</li>
 </ul></li>
 <li>Updated
 <ul class="org-ul">
